updating our details

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
 <body>
     <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm</p>
+        <p class='masthead-intro'>Hi I'm Hoyeon Kim</p>
         <h1 class='masthead-heading'>Hoyeon Kim</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Welcome to Hoyeon's very first website!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from South Korea. Decided to come to U.S right after highschool, started studying English in 2012 in San Diego. Transferred from South Western College to UCSB in 2016 Fall. Graduated with Chemistry degree in 2019. Let's be friends! I go by Henry too :)</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Working out at a gym, Watching Youtube videos and cooking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>It would be starting my own business at some point</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I've lived in the city of Irvine since 2019.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'd love to have basical understanding of coding whether I become a professional programmer or the others. I want to figure it out what is going on behind the website we see everyday. I believe making our daily lives easier can be started and achieved by learning coding.</p>
     </section>
 
     <footer id="footer">
