--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm Hoyeon Kim</p>
+        <p class='masthead-intro'>Hi I'm</p>
         <h1 class='masthead-heading'>Hoyeon Kim</h1>
     </header>
     <section class="details">
